--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="grid">
         <nav class="navbar nav navbar-expand-sm">
             <div class="container nav background">
+                <a class="navbar-brand mr-auto" href="./index.html"><img src="image/Logo.png"></a>
                 <button class="navbar-toggler sp-btn"  type="button" data-toggle="collapse" data-target="#Navbar">
                         <span id="button" class="fa fa-bars "></span>
                 </button>
-                <a class="navbar-brand mr-auto" href="./index.html"><img src="image/Logo.png"></a>
                     <div class="collapse navbar-collapse" id="Navbar">
                         <ul class="navbar-nav ml-auto">
                             <li class="nav-item active"><a class="nav-link" href="./works.html"> Works</a></li>
@@ -33,39 +33,39 @@
         </nav>
         <header class="header jumbotron">
             <div class="container">
-                <div class="row row-header">
-                    <div class="col-12 col-sm-6 py-5">
+                <div class="row row-header position">
+                    <div class="col-12  col-md-6 col-sm-6 py-5">
                         <h1 class="display-4">Your Mobile <br> Solutions Partner.</h1>
                         <p class="mt-5 text">We build mobile apps that capture your total <br>
                             business value and keep your users hooked.
                         </p>
                         <a class="btn btn-light text" href="#">BOOK NOW</a>
                     </div>
-                    <div class="col-12 col-sm-6 align-self-center" style="background: url('image/home.png') right
+                    <div class="col-12  col-md-6 col-sm-6 align-self-center top" style="background: url('image/home.png') right
                     center no-repeat;">
-                        <div style="height:600px;"></div>
+                        <div class="top" style="height:600px;"></div>
                     </div>
                 </div>
             </div>
         </header>
         <div class="main">
             <div class="container"> 
-                <div class="row row-content">
-                    <div class="col-12 col-sm-5 offset-md-1">
-                        <div class="mt-5">
-                            <img class="image ellipse mr-3 mt-3" src="image/Ellipse.png"alt="">
-                            <img class="image bhood mr-3 mt-3" src="image/bhood-music.png"alt="">
+                <div class="row">
+                    <div class="col-12  col-md-6 col-sm-6">
+                        <div class="">
+                            <img class=" ellipse" src="image/Ellipse.png" alt="">
+                            <img  class=" bhood " src="image/bhood-music.png"alt="">
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6">
-                        <div class="mt-5 app-content">
-                            <h2 class="mt-5 ml-5 mr-5">Bhood App</h2>
-                            <h4 class="ml-5 mr-5">A music streaming service</h4>
-                            <p class="ml-5 mr-5">
+                    <div class="col-12  col-md-6  col-sm-6">
+                        <div class=" app-content">
+                            <h2 class="mt-5 mr-5">Bhood App</h2>
+                            <h4 class="mr-5">A music streaming service</h4>
+                            <p class=" mr-5">
                             Bhood music is your one stop place for your unlimited
-                            brotherhood of the cross and star songd, videos,
+                            brotherhood of the cross and star songs, videos,
                             documentaries, short movies, gospel, newsletters</p>
-                            <a class="btn  btn-outline-dark ml-5" id="reserveButton" href="#reservation">
+                            <a class="btn  btn-outline-dark" id="reserveButton" href="#reservation">
                             Reserve Table
                             </a>
                         </div>
@@ -74,45 +74,46 @@
             </div> 
         </div>
         <section class="section1">
-            <div class="container"> <div class="row row-content py-5">
-                <div class="col-12 col-sm-6">
-                    <div class=" mt-5 app-content">
-                        <h2 class="mt-5 ml-5 mr-5">Cabby Nigeria</h2>
-                        <h4 class="ml-5 mr-5">Ride Hailing Service</h4>
-                        <p class="ml-5 mr-5">
+            <div class="container"> <div class="row row-content position">
+                <div class="col-12 col-md-6  col-sm-6">
+                    <div class=" app-content">
+                        <h2 class="mt-5 mr-5">Cabby Nigeria</h2>
+                        <h4 class="mr-5">Ride Hailing Service</h4>
+                        <p class="mr-5">
                             Cabby Nigeria is a mobile app for quick,simple and reliable rides arround your city. 
                             The app allows people to request for a taxi or hire a cab all from their smart phone.
                             They provide acess to transportation service to fit your daily needs.</p>
-                        <a class="btn  btn-outline-dark ml-5" id="reserveButton" href="#reservation">
+                        <a class="btn  btn-outline-dark" id="reserveButton" href="#reservation">
                             Reserve Table
                         </a>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6">
-                    <div class="mt-5">
-                        <img class="image ellipse mr-3 mt-3" src="image/Ellipse.png"alt="">
-                        <img class="image bhood mr-3 mt-3" src="image/cabby.png" alt="">
-                    </div>
+                <div class="col-12  col-md-6 col-sm-6">
+                        <div class="">
+                                <img class=" ellipse" src="image/Ellipse.png" alt="">
+                                <img  class=" bhood " src="image/cabby.png"alt="">
+                            </div>
+                </div>
                 </div>
             </div>
         </section>
         <section class="section2">
             <div class="container"> 
-                <div class="row row-content py-5">
-                    <div class="col-12 col-sm-5 offset-md-1">
+                <div class="row row-content">
+                    <div class="col-12 col-md-6 col-sm-6">
                         <div class="mt-5">
-                            <img class="image ellipse mr-3 mt-3" src="image/Ellipse.png" alt="">
-                            <img class="image bhood mr-3 mt-3" src="image/killbill.png" alt="">
+                            <img class=" ellipse" src="image/Ellipse.png" alt="">
+                            <img class="bhood" src="image/killbill.png" alt="">
                         </div>
                     </div>
-                    <div class="col-12 col-sm-6">
-                        <div class=" mt-5 app-content">
-                            <h2 class=" mt-5 ml-5 mr-5">Bill Kill</h2>
-                            <h4 class="  ml-5 mr-5">Ride Hailing Service.</h4>
-                            <p class="  ml-5 mr-5">
+                    <div class="col-12 col-md-6 col-sm-6">
+                        <div class=" app-content">
+                            <h2 class=" mt-5 mr-5">Bill Kill</h2>
+                            <h4 class="mr-5">Ride Hailing Service.</h4>
+                            <p class="mr-5">
                             BillKIll is a financial App based in Norway that makes it easy for young Norwegians to take control of their personal finances.The app combines the knowledge and expertise of banking and finance with behavioural psycology and gaming
                             mechanics to create financial service that fits the customer needs.</p>
-                            <a class="btn  btn-outline-dark ml-5" id="reserveButton" href="#reservation">
+                            <a class="btn  btn-outline-dark " id="reserveButton" href="#reservation">
                             Reserve Table
                             </a>
                         </div>
@@ -198,7 +199,7 @@
         <section class="section4">
             <div class="container">
                 <div class="row row-content">
-                    <div class="col-12 col-md-9 offset-md-2">
+                    <div class="col-12">
                         <h1 class="mt-5 text-center">Interested in working with us?</h1>
                         <p class="text-center">Contact us now and lets turn your app ideas into a full mobile product that  <br> 
                             will suit your business need</p>
