--- a/services.html
+++ b/services.html
@@ -14,14 +14,14 @@
 </head>
 <body>
     <div class="grid1">
-        <nav class="navbar S-nav navbar-expand-sm">
-            <div class="container nav background">
-                <button class="navbar-toggler sp-btn"  type="button" data-toggle="collapse" data-target="#Navbar">
-                        <span id="button" class="fa fa-bars "></span>
-                </button>
-                <a class="navbar-brand mr-auto" href="./index.html"><img src="image/Logo.png"></a>
-                    <div class="collapse navbar-collapse" id="Navbar">
-                            <ul class="navbar-nav ml-auto">
+            <nav class="navbar nav navbar-expand-sm">
+                    <div class="container nav background">
+                        <a class="navbar-brand mr-auto" href="./index.html"><img src="image/Logo.png"></a>
+                        <button class="navbar-toggler sp-btn"  type="button" data-toggle="collapse" data-target="#Navbar">
+                                <span id="button" class="fa fa-bars "></span>
+                        </button>
+                            <div class="collapse navbar-collapse" id="Navbar">
+                                <ul class="navbar-nav ml-auto">
                                     <li class="nav-item active"><a class="nav-link" href="./works.html"> Works</a></li>
                                     <li class="nav-item"><a class="nav-link" href="./services.html"> Services</a></li>
                                     <li class="nav-item"><a class="nav-link" href="./company.html">Company</a></li>
@@ -29,9 +29,9 @@
                                     <li class="nav-item"><a class="nav-link" href="./blog.html">Blog</a></li>
                                     <li class="nav-item"><a class="btn btn-dark nav-link" href="./contactus.html">Talk to us</a></li>
                                 </ul>
+                            </div>
                     </div>
-            </div>
-        </nav>
+                </nav>
         <header class="S-header jumbotron">
             <div class="container">
                 <div class="row row-header">
@@ -302,7 +302,7 @@
         <section class="S-section4">
             <div class="container">
                 <div class="row row-content">
-                    <div class="col-12 col-md-9 offset-md-2 align-item-center">
+                    <div class="col-12">
                         <h1 class="text-center">Interested in working with us?</h1>
                         <p class="text-center">Contact us now and lets turn your app ideas into a full mobile product that  <br> 
                             will suit your business need</p>
