--- a/careers.html
+++ b/careers.html
@@ -14,23 +14,24 @@
 </head>
 <body>
     <div class="grid">
-        <nav class="navbar C-nav navbar-expand-sm">
-            <div class="container nav background">
-                <button class="navbar-toggler sp-btn"  type="button" data-toggle="collapse" data-target="#Navbar">
-                        <span id="button" class="fa fa-bars "></span>
-                </button>
-                <a class="navbar-brand mr-auto" href="./index.html"><img src="image/Logo.png"></a>
-                    <div class="collapse navbar-collapse" id="Navbar">
-                        <ul class="navbar-nav ml-auto">
-                                <li class="nav-item active"><a class="nav-link" href="./works.html"> Works</a></li>
-                                <li class="nav-item"><a class="nav-link" href="./services.html"> Services</a></li>
-                                <li class="nav-item"><a class="nav-link" href="./company.html">Company</a></li>
-                                <li class="nav-item"><a class="nav-link" href="./careers.html">Careers</a></li>
-                                <li class="nav-item"><a class="nav-link" href="./blog.html">Blog</a></li>
-                                <li class="nav-item"><a class="btn btn-dark nav-link" href="./contactus.html">Talk to us</a></li>
-                        </ul>
+            <nav class="navbar nav navbar-expand-sm">
+                    <div class="container nav background">
+                        <a class="navbar-brand mr-auto" href="./index.html"><img src="image/Logo.png"></a>
+                        <button class="navbar-toggler sp-btn"  type="button" data-toggle="collapse" data-target="#Navbar">
+                                <span id="button" class="fa fa-bars "></span>
+                        </button>
+                            <div class="collapse navbar-collapse" id="Navbar">
+                                <ul class="navbar-nav ml-auto">
+                                    <li class="nav-item active"><a class="nav-link" href="./works.html"> Works</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="./services.html"> Services</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="./company.html">Company</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="./careers.html">Careers</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="./blog.html">Blog</a></li>
+                                    <li class="nav-item"><a class="btn btn-dark nav-link" href="./contactus.html">Talk to us</a></li>
+                                </ul>
+                            </div>
                     </div>
-        </nav>
+                </nav>
         <header class="C-header jumbotron">
             <div class="container">
                 <div class="row-header">
