--- a/works.html
+++ b/works.html
@@ -14,23 +14,24 @@
 </head>
 <body>
     <div class="grid">
-        <nav class="navbar nav navbar-expand-sm">
-            <div class="container background">
-                <button class="navbar-toggler sp-btn"  type="button" data-toggle="collapse" data-target="#Navbar">
-                        <span id="button" class="fa fa-bars "></span>
-                </button>
-                <a class="navbar-brand mr-auto" href="./index.html"><img src="image/Logo.png"></a>
-                    <div class="collapse navbar-collapse" id="Navbar">
-                        <ul class="navbar-nav ml-auto">
-                                <li class="nav-item active"><a class="nav-link" href="./works.html"> Works</a></li>
-                                <li class="nav-item"><a class="nav-link" href="./services.html"> Services</a></li>
-                                <li class="nav-item"><a class="nav-link" href="./company.html">Company</a></li>
-                                <li class="nav-item"><a class="nav-link" href="./careers.html">Careers</a></li>
-                                <li class="nav-item"><a class="nav-link" href="./blog.html">Blog</a></li>
-                                <li class="nav-item"><a class="btn btn-dark nav-link" href="./contactus.html">Talk to us</a></li>
-                        </ul>
+            <nav class="navbar nav navbar-expand-sm">
+                    <div class="container nav background">
+                        <a class="navbar-brand mr-auto" href="./index.html"><img src="image/Logo.png"></a>
+                        <button class="navbar-toggler sp-btn"  type="button" data-toggle="collapse" data-target="#Navbar">
+                                <span id="button" class="fa fa-bars "></span>
+                        </button>
+                            <div class="collapse navbar-collapse" id="Navbar">
+                                <ul class="navbar-nav ml-auto">
+                                    <li class="nav-item active"><a class="nav-link" href="./works.html"> Works</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="./services.html"> Services</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="./company.html">Company</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="./careers.html">Careers</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="./blog.html">Blog</a></li>
+                                    <li class="nav-item"><a class="btn btn-dark nav-link" href="./contactus.html">Talk to us</a></li>
+                                </ul>
+                            </div>
                     </div>
-        </nav>
+                </nav>
         <header class="header jumbotron">
             <div class="container">
                 <div class="row-header">
@@ -46,74 +47,72 @@
         </header>
         <div class="main">
                 <div class="container"> 
-                    <div class="row row-content">
-                        <div class="col-12 col-sm-5 offset-md-1">
-                                <div class="mt-5">
-                                <img class="image ellipse mr-3 mt-3" src="image/Ellipse.png" alt="">
-                                <img class="image bhood mr-3 mt-3" src="image/bhood-music.png" alt="">
-                            </div>
-                        </div>
-                        <div class="col-12 col-sm-6">
-                            <div class=" mt-5 app-content">
-                                <h2 class=" mt-5 ml-5 mr-5">Bhood App</h2>
-                                <h4 class="  ml-5 mr-5">A music streaming service</h4>
-                                <p class="  ml-5 mr-5">
+                        <div class="row">
+                                <div class="col-12 col-sm-6">
+                                    <div class="">
+                                        <img class=" ellipse" src="image/Ellipse.png" alt="">
+                                        <img  class=" bhood " src="image/bhood-music.png"alt="">
+                                    </div>
+                                </div>
+                                <div class="col-12 col-sm-6">
+                                    <div class=" app-content">
+                                        <h2 class="mt-5 mr-5">Bhood App</h2>
+                                        <h4 class="mr-5">A music streaming service</h4>
+                                        <p class=" mr-5">
                                         Bhood music is your one stop place for your unlimited
-                                        brotherhood of the cross and star songd, videos,
-                                     documentaries, short movies, gospel, newsletters</p>
-                                     <a class="btn btn-outline-dark ml-5" id="reserveButton" href="#reservation">
-                                            Reserve Table
-                                    </a>
+                                        brotherhood of the cross and star songs, videos,
+                                        documentaries, short movies, gospel, newsletters</p>
+                                        <a class="btn  btn-outline-dark" id="reserveButton" href="#reservation">
+                                        Reserve Table
+                                        </a>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
                 </div>
                  
         </div>
         <section class="section1">
-                <div class="container"> <div class="row row-content">
+                <div class="container"> <div class="row row-content position">
                         <div class="col-12 col-sm-6">
-                            <div class=" mt-5 app-content">
-                                <h2 class="mt-5 ml-5 mr-5">Cabby Nigeria</h2>
-                                <h4 class="ml-5 mr-5">Ride Hailing Service</h4>
-                                <p class="ml-5 mr-5">
+                            <div class=" app-content">
+                                <h2 class="mt-5 mr-5">Cabby Nigeria</h2>
+                                <h4 class="mr-5">Ride Hailing Service</h4>
+                                <p class="mr-5">
                                     Cabby Nigeria is a mobile app for quick,simple and reliable rides arround your city. 
                                     The app allows people to request for a taxi or hire a cab all from their smart phone.
                                     They provide acess to transportation service to fit your daily needs.</p>
-                                <a class="btn  btn-outline-dark ml-5" id="reserveButton" href="#reservation">
+                                <a class="btn  btn-outline-dark" id="reserveButton" href="#reservation">
                                     Reserve Table
                                 </a>
                             </div>
                         </div>
                         <div class="col-12 col-sm-6">
-                            <div class="mt-5">
-                                <img class="image ellipse mr-3 mt-3" src="image/Ellipse.png"alt="">
-                                <img class="image bhood mr-3 mt-3" src="image/cabby.png" alt="">
-                            </div>
+                                <div class="">
+                                        <img class=" ellipse" src="image/Ellipse.png" alt="">
+                                        <img  class=" bhood " src="image/cabby.png"alt="">
+                                    </div>
+                        </div>
                         </div>
                     </div>
         </section>
         <section class="section2">
-                <div class="container"> <div class="row row-content">
-                        <div class="col-12 col-sm-5 offset-md-1">
-                                <div class="mt-5">
-                                <img class="image ellipse mr-3 mt-3" src="image/Ellipse.png"
-                                alt="">
-                                <img class="image bhood mr-3 mt-3" src="image/killbill.png"
-                                alt="">
+                <div class="container">  <div class="row row-content">
+                        <div class="col-12 col-sm-6">
+                            <div class="mt-5">
+                                <img class=" ellipse" src="image/Ellipse.png" alt="">
+                                <img class="bhood" src="image/killbill.png" alt="">
                             </div>
                         </div>
                         <div class="col-12 col-sm-6">
-                            <div class=" mt-5 app-content">
-                                <h2 class=" mt-5 ml-5 mr-5">Bhood App</h2>
-                                <h4 class="  ml-5 mr-5">A music streaming service</h4>
-                                <p class="  ml-5 mr-5">
-                                        Bhood music is your one stop place for your unlimited
-                                        brotherhood of the cross and star songd, videos,
-                                     documentaries, short movies, gospel, newsletters</p>
-                                     <a class="btn  btn-outline-dark ml-5" id="reserveButton" href="#reservation">
-                                            Reserve Table
-                                    </a>
+                            <div class=" app-content">
+                                <h2 class=" mt-5 mr-5">Bill Kill</h2>
+                                <h4 class="mr-5">Ride Hailing Service.</h4>
+                                <p class="mr-5">
+                                BillKIll is a financial App based in Norway that makes it easy for young Norwegians to take control of their personal finances.The app combines the knowledge and expertise of banking and finance with behavioural psycology and gaming
+                                mechanics to create financial service that fits the customer needs.</p>
+                                <a class="btn  btn-outline-dark " id="reserveButton" href="#reservation">
+                                Reserve Table
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -153,7 +152,7 @@
         <section class="section4">
             <div class="container">
                 <div class="row row-content">
-                    <div class="col-12 col-md-9 offset-md-2">
+                    <div class="col-12">
                         <h1 class="mt-5 text-center">Want to Build Your Next App?</h1>
                         <p class="text-center">Contact us now and lets turn your app ideas into a full mobile product that  <br> 
                             will suit your business need</p>
