Fix card shadow
-Fixed shadow on cards to match design
-created .shadow class

--- a/home.html
+++ b/home.html
@@ -181,7 +181,7 @@
                         <div class="row">
 
                             <div class="card-deck">
-                                <div class="card shadow-sm bg-white">
+                                <div class="card shadow bg-white">
                                     <div class="card-body">
                                         <h5 class="h5">Product Design Discovery</h5>
                                         <p class="page">We embark on a 5-Day sprint to analyse and discuss details of the project with the client
@@ -193,7 +193,7 @@
                                 </div>
 
 
-                                <div class="card shadow-sm bg-white">
+                                <div class="card shadow bg-white">
                                     <div class="card-body">
                                         <h5 class="h5">Project Management</h5>
                                         <p class="page">Our project manager ensures that tasks are followed and completed on scheldule and are available.</p>
@@ -203,7 +203,7 @@
                                     </div>
                                 </div>
 
-                                <div class="card shadow-sm bg-white">
+                                <div class="card shadow bg-white">
                                     <div class="card-body">
                                         <h5 class="h5">Android Development</h5>
                                         <p class="page">We make use of powerful project management and efficency tools for our
@@ -232,7 +232,7 @@
 
                         <div class="row">
                             <div class="card-deck">
-                                <div class="card shadow-sm bg-white">
+                                <div class="card shadow bg-white">
                                     <div class="card-body">
                                         <h5 class="h5">IOS Development</h5>
                                         <p class="page">We make use of powerful IOS development tools to ensure that the
@@ -243,7 +243,7 @@
                                     </div>
                                 </div>
 
-                                <div class="card shadow-sm bg-white">
+                                <div class="card shadow bg-white">
                                     <div class="card-body">
                                         <h5 class="h5">UI/UX Design</h5>
                                         <p class="page">We offer prototyping ,User experience and user interface design for our
@@ -255,7 +255,7 @@
                                 </div>
 
 
-                                <div class="card shadow-sm bg-white">
+                                <div class="card shadow bg-white">
                                     <div class="card-body">
                                         <h5 class="h5">Web Development</h5>
                                         <p class="page">We offer both frontend and backend development services for our clients,
@@ -305,7 +305,6 @@
 
         <footer class="footer">
             <div class="row">
-
                 <div class="container">
                     <div class="row row-content">
                         <div class="col-lg-5 col-sm-12 footer-text">
