Update footer about
- added container class to fix layout changes in mobile devices

--- a/home.html
+++ b/home.html
@@ -309,18 +309,21 @@
                     <div class="row row-content">
                         <div class="col-lg-5 col-sm-12 footer-text">
                             <div class="row">
-                                <h3>About Us</h3>
-                                <p class="">Sprinthub mobile is an innovative
-                                    fullstack mobile app development company driven by a strong design
-                                    thinking, product development and
-                                    solutions providing merchant
-                                </p>
-                                <address>
-                                    (+234) 812 873 9485<br>
-                                    No 6 Chief Matthew Close behind<br>
-                                    Royal House of Grace Church, Tombia<br>
-                                    Extension, Port Harcourt, Rivers State.
-                                </address>
+                                <div class="container">
+                                    <h3>About Us</h3>
+                                    <p class="">Sprinthub mobile is an innovative
+                                        fullstack mobile app development company driven by a strong design
+                                        thinking, product development and
+                                        solutions providing merchant
+                                    </p>
+                                    <address>
+                                        (+234) 812 873 9485<br>
+                                        No 6 Chief Matthew Close behind<br>
+                                        Royal House of Grace Church, Tombia<br>
+                                        Extension, Port Harcourt, Rivers State.
+                                    </address>
+                                </div>
+
                             </div>
 
                         </div>
