updated web layout

--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="node_modules/bootstrap-social/css/bootstrap-social.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap-social.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -57,7 +57,7 @@
                 <div class="row mt-3">
                     <h2>Tech</h2>
                 </div>
-                <div class="row mt-5">
+                <div class="row mt-5 position2">
                     <div class="col-12 col-md-4">
                         <div class="left-column">
                             <div class="card" style="width:25rem; font-size: 14px;">
@@ -110,8 +110,8 @@
                     <h2>Design</h2>
                 </div>
                 <div class="row row-content">
-                    <div class="col-12">
-                        <div class="card-deck">
+                    <div class="col-12 ">
+                        <div class="card-deck card-sm">
                                <div class="card" >
                                     <div class="grey"></div>
                                     <div class="card-body">
@@ -204,10 +204,10 @@
                         </div>
                         <div class="row mt-5">
                             <div class="col-12">
-                                <div class="card-deck">
+                                <div class="card-deck card-sm">
                                        <div class="card" >
                                             <div class="grey"></div>
-                                            <div class="card-body">
+                                            <div class="card-body d-none d-sm-block">
                                                 <p class="text-small">Marketing</p>
                                                 <h5 >Getting Started using<br> Kotlin for development</h5>
                                                 <p>Take a look at how enral shawn and<br> steve robinson talked on this topic.</p>
