--- a/works.html
+++ b/works.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="node_modules/bootstrap-social/css/bootstrap-social.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap-social.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -48,32 +48,32 @@
         <div class="main">
                 <div class="container"> 
                         <div class="row">
-                                <div class="col-12 col-sm-6">
-                                    <div class="">
-                                        <img class=" ellipse" src="image/Ellipse.png" alt="">
-                                        <img  class=" bhood " src="image/bhood-music.png"alt="">
-                                    </div>
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <div class=" app-content">
-                                        <h2 class="mt-5 mr-5">Bhood App</h2>
-                                        <h4 class="mr-5">A music streaming service</h4>
-                                        <p class=" mr-5">
-                                        Bhood music is your one stop place for your unlimited
-                                        brotherhood of the cross and star songs, videos,
-                                        documentaries, short movies, gospel, newsletters</p>
-                                        <a class="btn  btn-outline-dark" id="reserveButton" href="#reservation">
-                                        Reserve Table
-                                        </a>
-                                    </div>
+                            <div class="col-12 col-md-6 col-sm-6">
+                                <div class="">
+                                    <img class=" ellipse" src="image/Ellipse.png" alt="" height="">
+                                    <img  class=" bhood " src="image/bhood-music.png"alt="" >
                                 </div>
                             </div>
-                </div>
+                            <div class="col-12 col-md-6  col-sm-6">
+                                <div class=" app-content">
+                                    <h2 class="mt-5 ml-5">Bhood App</h2>
+                                    <h4 class="ml-5">A music streaming service</h4>
+                                    <p class=" ml-5">
+                                    Bhood music is your one stop place for your unlimited
+                                    brotherhood of the cross and star songs, videos,
+                                    documentaries, short movies, gospel, newsletters</p>
+                                    <a class="btn  btn-outline-dark ml-5" id="reserveButton" href="#reservation">
+                                    Reserve Table
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div> 
                  
         </div>
         <section class="section1">
                 <div class="container"> <div class="row row-content position">
-                        <div class="col-12 col-sm-6">
+                        <div class="col-12 col-md-6  col-sm-6">
                             <div class=" app-content">
                                 <h2 class="mt-5 mr-5">Cabby Nigeria</h2>
                                 <h4 class="mr-5">Ride Hailing Service</h4>
@@ -86,7 +86,7 @@
                                 </a>
                             </div>
                         </div>
-                        <div class="col-12 col-sm-6">
+                        <div class="col-12  col-md-6 col-sm-6">
                                 <div class="">
                                         <img class=" ellipse" src="image/Ellipse.png" alt="">
                                         <img  class=" bhood " src="image/cabby.png"alt="">
@@ -96,27 +96,28 @@
                     </div>
         </section>
         <section class="section2">
-                <div class="container">  <div class="row row-content">
-                        <div class="col-12 col-sm-6">
-                            <div class="mt-5">
-                                <img class=" ellipse" src="image/Ellipse.png" alt="">
-                                <img class="bhood" src="image/killbill.png" alt="">
+                <div class="container"> 
+                        <div class="row row-content">
+                            <div class="col-12 col-md-6 col-sm-6">
+                                <div class="mt-5">
+                                    <img class=" ellipse" src="image/Ellipse.png" alt="">
+                                    <img class="bhood" src="image/killbill.png" alt="">
+                                </div>
                             </div>
-                        </div>
-                        <div class="col-12 col-sm-6">
-                            <div class=" app-content">
-                                <h2 class=" mt-5 mr-5">Bill Kill</h2>
-                                <h4 class="mr-5">Ride Hailing Service.</h4>
-                                <p class="mr-5">
-                                BillKIll is a financial App based in Norway that makes it easy for young Norwegians to take control of their personal finances.The app combines the knowledge and expertise of banking and finance with behavioural psycology and gaming
-                                mechanics to create financial service that fits the customer needs.</p>
-                                <a class="btn  btn-outline-dark " id="reserveButton" href="#reservation">
-                                Reserve Table
-                                </a>
+                            <div class="col-12 col-md-6 col-sm-6">
+                                <div class=" app-content">
+                                    <h2 class=" mt-5 ml-5">Bill Kill</h2>
+                                    <h4 class="ml-5">Ride Hailing Service.</h4>
+                                    <p class="ml-5">
+                                    BillKIll is a financial App based in Norway that makes it easy for young Norwegians to take control of their personal finances.The app combines the knowledge and expertise of banking and finance with behavioural psycology and gaming
+                                    mechanics to create financial service that fits the customer needs.</p>
+                                    <a class="btn  btn-outline-dark ml-5" id="reserveButton" href="#reservation">
+                                    Reserve Table
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
         </section>
         <section class="section3">
                 <div class="container">
