--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <header class="header jumbotron">
             <div class="container">
                 <div class="row row-header position">
-                    <div class="col-12  col-md-6 col-sm-6 py-5">
+                    <div class="col-12 col-md-6 col-sm-6 py-5">
                         <h1 class="display-4">Your Mobile <br> Solutions Partner.</h1>
                         <p class="mt-5 text">We build mobile apps that capture your total <br>
                             business value and keep your users hooked.
@@ -51,21 +51,21 @@
         <div class="main">
             <div class="container"> 
                 <div class="row">
-                    <div class="col-12  col-md-6 col-sm-6">
+                    <div class="col-12 col-md-6 col-sm-6">
                         <div class="">
-                            <img class=" ellipse" src="image/Ellipse.png" alt="">
-                            <img  class=" bhood " src="image/bhood-music.png"alt="">
+                            <img class=" ellipse" src="image/Ellipse.png" alt="" height="">
+                            <img  class=" bhood " src="image/bhood-music.png"alt="" >
                         </div>
                     </div>
-                    <div class="col-12  col-md-6  col-sm-6">
+                    <div class="col-12 col-md-6  col-sm-6">
                         <div class=" app-content">
-                            <h2 class="mt-5 mr-5">Bhood App</h2>
-                            <h4 class="mr-5">A music streaming service</h4>
-                            <p class=" mr-5">
+                            <h2 class="mt-5 ml-5">Bhood App</h2>
+                            <h4 class="ml-5">A music streaming service</h4>
+                            <p class=" ml-5">
                             Bhood music is your one stop place for your unlimited
                             brotherhood of the cross and star songs, videos,
                             documentaries, short movies, gospel, newsletters</p>
-                            <a class="btn  btn-outline-dark" id="reserveButton" href="#reservation">
+                            <a class="btn  btn-outline-dark ml-5" id="reserveButton" href="#reservation">
                             Reserve Table
                             </a>
                         </div>
@@ -98,6 +98,7 @@
             </div>
         </section>
         <section class="section2">
+
             <div class="container"> 
                 <div class="row row-content">
                     <div class="col-12 col-md-6 col-sm-6">
@@ -108,12 +109,12 @@
                     </div>
                     <div class="col-12 col-md-6 col-sm-6">
                         <div class=" app-content">
-                            <h2 class=" mt-5 mr-5">Bill Kill</h2>
-                            <h4 class="mr-5">Ride Hailing Service.</h4>
-                            <p class="mr-5">
+                            <h2 class=" mt-5 ml-5">Bill Kill</h2>
+                            <h4 class="ml-5">Ride Hailing Service.</h4>
+                            <p class="ml-5">
                             BillKIll is a financial App based in Norway that makes it easy for young Norwegians to take control of their personal finances.The app combines the knowledge and expertise of banking and finance with behavioural psycology and gaming
                             mechanics to create financial service that fits the customer needs.</p>
-                            <a class="btn  btn-outline-dark " id="reserveButton" href="#reservation">
+                            <a class="btn  btn-outline-dark ml-5" id="reserveButton" href="#reservation">
                             Reserve Table
                             </a>
                         </div>
