--- a/tech.html
+++ b/tech.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="node_modules/bootstrap-social/css/bootstrap-social.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap-social.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -36,10 +36,10 @@
                                 <h2>Latest Stories</h2>
                             </div>
                     <div class="row mt-5">
-                        <div class="col-12 col-sm-5 ">
+                        <div class="col-12 col-md-6 col-sm-6 ">
                             <div class="blogBox"></div>
                         </div>
-                        <div class="col-12 col-sm-7 align-self-center" >
+                        <div class="col-12 col-md-6 col-sm-6 align-self-center" >
                             <div>
                                 <p class="text-small">Marketing</p>
                                 <h2 >How Riding on Your <br> Next Career can help<br> you</h2>
@@ -56,8 +56,8 @@
                         <div class="row mt-5">
                                 <h2>Tech</h2>
                             </div>
-                    <div class="row mt-5">
-                        <div class="col-12 col-md-4">
+                    <div class="row mt-5 position2">
+                        <div class="col-12 col-md-5 ">
                             <div class="left-column">
                                 <div class="card" style="width:25rem; font-size: 14px;">
                                     <div class="grey"></div>
@@ -71,11 +71,12 @@
                                 </div> 
                             </div>
                         </div>
-                            <div class="col-12 col-md-8">
+                            <div class="col-12 col-md-7">
+                                <!-- <div style="width:100%;"> -->
                                 <hr>
                                 <div class="card">
                                     <div class="card-horizontal">
-                                        <div class="gray"></div>
+                                        <div class="mt-4 gray"></div>
                                     <div class="card-body">
                                         <h4 class="card-title mt-2">How to become a User Experience designer.</h4>
                                          <p class="card-text">Becoming a Ux designer at the begineer stage of your career<br> to be what you want
@@ -88,7 +89,7 @@
                                     <hr>
                                     <div class="card">
                                             <div class="card-horizontal">
-                                                <div class="gray"></div>
+                                                <div class="mt-4 gray"></div>
                                             <div class="card-body">
                                                 <h4 class="card-title mt-2">How to become a User Experience designer.</h4>
                                                  <p class="card-text">Becoming a Ux designer at the begineer stage of your career<br> to be what you want
@@ -99,6 +100,7 @@
                                             </div>
                                         </div>
                                             <hr>
+                                <!-- </div>         -->
                             </div>
                     </div>
 
@@ -106,7 +108,7 @@
                             <h2 class="read">Marketing</h2>
                         </div>
                 <div class="row mt-5">
-                <div class="col-12 offset-md-1">
+                <div class="col-12 offset-md-1 ">
                     <div class="left-column">
                         <div class="greyBox"></div>
                     </div>
@@ -144,7 +146,7 @@
                                     </div>
                                     <div class="right-column">
                                         <h4 class="mt-2">How to become a User Experience designer.</h4>
-                                         <p>Becoming a Ux designer at the begineer stage of your career<br> to be what you want
+                                         <p class="">Becoming a Ux designer at the begineer stage of your career<br> to be what you want
                                               to become requires sacrifice.</p> 
                                         <p>By Ridnash Khaleel</p> 
                                         <p>26th May 2019 4 min read</p> 
