updated web layout

--- a/careers.html
+++ b/careers.html
@@ -250,54 +250,51 @@
         <!--  -->
         <footer class="C-footer">
                 <div class="container">
-                        <div class="row row-content ">
-                            <div class="col-12 col-md-4 col-sm-3 footer-text">
-                                <h3>About Us</h3>
-                                    <p class="">Sprinthub mobile is an innovative
-                                        fullstack mobile app development company driven by a strong design
-                                        thinking, product development and 
-                                        solutions providing merchant
-                                    </p>
+                        <div class="row row-content  ">
+                            <div class="col-12 col-md-3 footer-text">
+                                    <a class="" href="./index.html"><img src="image/logo-white.png"></a><br>
+                                <p class="">Sprinthub mobile is your mobile solutions partner</p>
+    
+                                    <h5>Address</h5>
+                                    <address>
+                                        No 6 Chief Matthew Close behind<br>
+                                        Royal House of Grace Church, Tombia<br>
+                                        Extension, Port Harcourt, Rivers State<br><br>
+                                    </address>
                             </div>
-                            <div class="col-12 col-md-4 col-sm-3">
-                                <div class="justify-content-center">
-                                    <h3 class="">Sitemap</h3>
-                                    <div class="row">
-                                        <div class="col-4">
-                                            <ul class="list-unstyled">
-                                                <li><a class="nav-link" href="./index.html"> Works</a></li>
-                                                <li><a class="nav-link" href="./aboutus.html">Services</a></li>
-                                                <li><a class="nav-link" href="./accomodation.html">Company</a></li>
-                                                <li><a class="nav-link" href="./aboutus.html">Blog</a></li>
-                                                <li><a class="nav-link" href="./accomodation.html">Presskit</a></li>
-                                            </ul>
-                                        </div>	
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- <div class="col-12 col-md-3 col-sm-3  footer-text">
-                                <h3>Newsletter</h3>
-                                <p>Subscribe to our newsletter to get latest news and amazing offers</p>
-                                <div class="input-group mb-3">
-                                    <input type="email" id="email" class="form-control" placeholder="Email">
-                                    <div class="input-group-prepend">
-                                        <div class="input-group-text email">
-                                            <i class="fa fa-send fa-lg"></i>
+                            <div class="col-12 col-md-3 col-sm-3">
+                                    <div class="justify-content-center">
+                                        <h5 class="">Sitemap</h5>
+                                        <div class="row">
+                                            <div class="col-12 ">
+                                                <ul class="list-unstyled ml-auto">
+                                                    <li><a class="nav-link" href="./index.html"> Works</a></li>
+                                                    <li><a class="nav-link" href="./aboutus.html">Services</a></li>
+                                                    <li><a class="nav-link" href="./accomodation.html">Company</a></li>
+                                                    <li><a class="nav-link" href="./aboutus.html">Blog</a></li>
+                                                    <li><a class="nav-link" href="./accomodation.html">Presskit</a></li>
+                                                </ul>
+                                            </div>	
                                         </div>
                                     </div>
                                 </div>
-                            </div> -->
-                            <div class="col-12 col-md-4 col-sm-3  footer-text">
-                                    <h5>Contact Us</h5>
-                                    <address>
-                                    (+234) 812 873 9485<br>
-                                      No 6 Chief Matthew Close behind<br>
-                                      Royal House of Grace Church, Tombia<br>
-                                      Extension, Port Harcourt, Rivers State<br><br>
-                                      <a href="mailto:hello@sprinthubmobile.com">hello@sprinthubmobile.com</a><br>
-                                      Mon-Fri 8:00am - 17:00pm
-                                   </address>
+                            <div class="col-12 col-md-3 footer-text">
+                                <h5>Contact Us</h5>
+                                <address>
+                                    Phone
+                                    <p>(+234) 812 873 9485</p>
+                                    Email
+                                    <p><a href="mailto:hello@sprinthubmobile.com">hello@sprinthubmobile.com</a></p>
+                                    <p>Social</p>
+                                </address>
                             </div>
+                            <div class="col-12 col-md-3 footer-text">
+                                    <h5>Openings</h5>
+                                    <address>
+                                            Mon-Fri<br>
+                                            8:00am - 17:00pm
+                                    </address>
+                                </div>
                         </div>
                         <hr>
                         <div class="row">             
@@ -311,7 +308,7 @@
         </footer>
     </div>
 </body>
-<script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
-<script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="js/jquery.slim.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </html>
